assets/css/main.scss
$brown: #c9c399;
$green: #d0d97a;
$mint: #badfbe;

html {
	margin: 0;
	padding: 0;
	overflow-x: hidden;
}

body {
    font-family: "proxima-nova", "Proxima Nova", sans-serif;
    @media (max-width: 600px) {
    	font-size: 14px;
    }
    font-weight: 400;
    line-height: 1.6em;
    padding: 0;
    margin: 0;
    overflow-x: hidden;
    position: relative;
}

.lang-link a {
	display: block;
	position: absolute;
	top: 6.6rem;
	right: 1rem;
	z-index: 10;
	color: inherit;
	text-decoration: none;
	border: 2px solid black;
	border-radius: 50%;
	font-size: 12px;
	font-weight: 700;
	line-height: 1.2;
	padding: 6px 6px 5px 5px;
	background: $green;
	transition: right 0.5s;

	&:active, &:hover, &:focus {
		background: black;
		color: $mint;
	}

	&.home {
		top: 1rem;
		background: none;
		border: none;
	}

	@media (max-width: 600px) {
		border-width: 1.5px;
		top: 5.65rem;
		font-size: 8px;
		font-weight: 600;
		padding: 4px 4px 3.5px 3.5px;
		&.home {
			top: 1rem;
		}
	}

	@media (max-width: 400px) {
		top: 1rem;
		padding: 0;
		font-size: 14px;
		line-height: 1.6;
		font-weight: 400;
		background: none;
		border: none;
		&.home {
			top: 1rem;
		}
	}
}

nav {
	margin: 2rem 0;
	min-height: 1rem;
	.mobile-menu {
		display: none;
		transition: left 0.5s;
		@media (max-width: 400px) {
			display: block;
			position: absolute;
			top: 1rem;
			left: 1rem;
			a {
				text-decoration: none;
				color: inherit;
			}
		}
	}
	ul {
		list-style-type: none;
		text-align: center;
		padding: 0;
	}
    li {
        display: inline-block;
        margin: 0 1rem;
        text-transform: uppercase;
        &.active {
        	color: $green;
        	font-weight: 800;
        }
        a {
        	color: inherit;
        	text-decoration: none;
        	&:active, &:hover, &:focus {
				color: $green;
			}
        }
    }
    @media (max-width: 600px) {
    	font-size: 12px;
    }
    @media (max-width: 400px) {
    	margin: 1rem 0;
    	ul {
    		transition: left 0.5s;
    		display: block;
    		position: fixed;
    		top: 0;
    		left: -10rem;
    		text-align: right;
    		height: 100%;
    		width: 10rem;
    		margin: 0;
    		padding: 1.2rem 2rem 0 0;
    		box-sizing: border-box;
    		background: $brown;
    		border-right: 1.5px solid black;
    		z-index: 20;
    	}
    	li {
    		display: block;
    		padding: 1.5rem 0;
    		&.active {
    			color: white;
    			font-weight: 400;
    		}
    		a {
    			&:active, &:hover, &:focus {
					color: white;
				}
    		}
    	}
    	&.active {
			.mobile-menu {
				left: 11rem;
			}
			.lang-link a {
				right: -9rem;
			}
			ul {
				left: 0;
			}
    	}
    }
}

main {
	position: relative;
	width: 100%;
	min-height: 60vh;
	overflow-x: hidden;
	@media (max-width: 400px) {
		transition: left 0.5s;
		left: 0;
		&.active-menu {
			left: 10rem;
		}
	}
	> * {
		width: 100%;
		max-width: 40rem;
		margin: 0 auto;
		box-sizing: border-box;
		padding: 0 1em;
		margin-bottom: 1em;
	}
	h1 {
		max-width: 100%;
		padding: 0;
		height: 4rem;
		background: linear-gradient(to right, $green, $green 50%, $mint 50%, $mint);
		border-top: 2px solid black;
		border-bottom: 2px solid black;
		margin-bottom: 2rem;
		box-sizing: content-box;
		img, a {
			display: block;
			margin: 0 auto;
			height: inherit;
			@media (max-width: 700px) and (min-width: 600px) {
				padding-right: 3rem;
			}
		}
		@media (max-width: 600px) {
			height: 2rem;
			border-top-width: 1px;
			border-bottom-width: 1px;
		}
	}
	.title {
		max-width: 100%;
		margin: -2px 0 1rem 0;
		padding: 0;
		height: 10.5rem;
		.container {
			width: 1100%;
			margin-left: -500%;
			height: inherit;
		}
		img {
			height: inherit;
			margin: 0 auto;
		}
		@media (max-width: 600px) {
			height: 6rem;
			margin-top: -1px;
		}
		@media (max-width: 400px) {
			height: 4.5rem;
		}
	}
	.wedding-date {
		max-width: 100%;
		margin: 0;
		padding: 0;
		border-bottom: 2px solid black;

		img {
			margin-top: -2rem;
			height: 7rem;
		}

		p {
			margin: 0;
			font-size: 4.5em;
			font-weight: 100;
			text-align: center;
		}
		@media (max-width: 830px) {
			padding-bottom: 0.5rem;
		}
		@media (max-width: 600px) {
			margin-top: -0.5rem;
			margin-bottom: -1rem;
			border-width: 1px;
			img {
				margin-top: -1rem;
				height: 4rem;
			}
			p {
				font-size: 2.4em;
			}
		}
		@media (max-width: 400px) {
			margin-top: 0rem;
			img {
				height: 3rem;
			}
			p {
				font-size: 2.8em;
			}
		}
	}

	.description {
		font-size: 1.2em;
		font-weight: 500;
		text-align: center;
		margin-top: 5rem;
		padding: 0 3rem;
		@media (max-width: 600px) {
			font-weight: 300;
		}
		@media (max-width: 400px) {
			// margin-top: 3rem;
			padding: 0 1.5rem;
			font-weight: 400;
		}
	}

	h2 {
		font-size: 1.2em;
		font-weight: 900;
		text-transform: uppercase;
		color: $green;
		&:nth-of-type(2n+1){
			color: $mint;
		}
		@media (max-width: 400px) {
			font-size: 1em;
		}
	}

	p a, ul a, ol a {
		color: inherit;
		text-decoration: none;
		position: relative;
		background: linear-gradient(transparent, transparent 75%, $green 75.1%, $green 90%, transparent 90.1%, transparent);
		&:hover, &:focus, &:active {
			background: linear-gradient($green, $green);
		}
	}
	p img {
		width: 100%;
		display: block;
		margin: 0 auto;
	}

	img {
		width: 100%;
	}

	&.hotel {
		p img {
			width: 70%;
		}
	}

	&.program {
		text-align: center;
		line-height: 1.3;

		strong {
			display: block;
			max-width: 18rem;
			margin: 0 auto;
			text-align: left;
		}

		ul {
			margin-top: -1em;
			text-align: left;
			max-width: 20rem;
			list-style-type: none;

			a {
				background: none;
				&:hover, &:focus, &:active {
					background: linear-gradient($green, $green);
				}
			}
		}

		h2 {
			font-size: 2em;
			font-weight: 800;
			text-transform: capitalize;
			border-top: 2px solid black;
			padding: 3rem 0;
			max-width: 100%;
			color: $mint;
			@media (max-width: 600px) {
				border-width: 1px;
				padding: 2rem 0;
			}
		}

		h3 {
			margin-top: -1em;
			margin-bottom: 0;
			font-size: 1.3em;
		}

		p img {
			width: 16rem;
			border: 2px solid black;
			margin-bottom: 0.5em;
		}

		hr {
			border: none;
			padding: 2rem 0;
			margin: 0;
			@media (max-width: 600px) {
				padding: 1rem 0;
				&:first-of-type {
					padding: 0;
				}
			}
		}
	}
}

.center {
	display: block;
	text-align: center;
}

.home-frame {
	position: relative;
	max-width: 750px;
	margin: 0 auto;
	border: 2px solid black;
	margin: 1.5rem auto;

	.leaf {
		width: 81px;
		position: absolute;
		top: 5.85rem;
		z-index: 10;
		&.left { left: -41px; }
		&.right { right: -41px; }
	}

	.triangle {
		width: 37px;
		position: absolute;
		z-index: 10;
		&.top { top: -2.5px; }
		&.left { left: -12px; }
		&.right { right: -12px; }
		&.bottom { bottom: -2.7px; }
	}

	.us-image {
		width: 10rem;
		margin: 3rem 0 -1rem 6rem
	}

	@media (max-width: 830px) {
		max-width: 100%;
		border-left: none;
		border-right: none;

		.leaf {
			display: none;
			&.left {
				display: block;
				left: 40%;
				top: 14.9rem;
			}
		}
	}
	@media (max-width: 600px) {
		border-width: 1px;

		.leaf.left {
			width: 40px;
			left: 43%;
			top: 9.2rem;
		}

		.triangle {
			width: 19px;
			&.top { top: -1.25px; }
			&.bottom { bottom: -1.3px; }
			&.left { left: -6.5px; }
			&.right { right: -6.5px; }
		}

		.us-image {
			width: 5rem;
			margin: 2rem 0 -0.6rem 4rem
		}
	}
	@media (max-width: 400px) {
		.leaf.left {
			top: 7.1rem;
		}
	}
}

a {
	color: inherit;
}

footer {
	width: 100%;
	margin: 4rem 0 0 0;
	background: $brown;
	border-top: 2px solid black;
	position: relative;
	bottom: 0;
	font-size: 0.8em;
	font-weight: 600;
	line-height: 1.6em;

	.content {
		padding: 1rem;
		margin: 0 auto;
		max-width: 40rem;
		@media (min-width: 1300px) {
			max-width: 100%;
			padding: 1rem 3rem;
		}
	}
	ul.nav {
		list-style-type: none;
		margin: 0;
		padding: 0;
		a {
			text-decoration: none;
		}
		.active a, a:active, a:hover, a:focus {
			text-decoration: underline;
		}
	}

	.left {
		float: left;
		text-align: left;
	}

	.right {
		float: right;
		text-align: right;
	}

	.skyline {
		margin: 0.5rem -1% -0.5rem -1%;
		bottom: 0;
		width: 102%;
	}
}

